fix(style.css): .section nowrap in .dashboard

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -96,6 +96,7 @@ button:focus-visible {
 /* 结果展示容器 */
 .dashboard {
   display: inline-block;
+  white-space: nowrap;
   width: fit-content;
   margin-top: 20px;
   margin-left: auto;
@@ -116,6 +117,7 @@ button:focus-visible {
   min-width: 200px;
 }
 
+/* 表格 */
 .data-group {
   flex: 1;
   overflow: visible;
